@@ -1,5 +1,5 @@
 This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+Debian GNU/Linux, changes the default orfer of sound output methods
 
 Index: b/audio/gen_audio.cc
 ===================================================================
