@@ -1,5 +1,6 @@
-This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+This patch is for speech-tools for Debian GNU/Linux,
+and forces the use of the actual template rather than that which
+is inherits from when defining Iter typedef.
 
 Index: b/include/EST_TIterator.h
 ===================================================================
