@@ -1,5 +1,5 @@
 This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+Debian GNU/Linux, to comply with Filesystem Hierarchy Standard
 
 --- speech-tools-1.2.3.orig/lib/siod/siod.scm
 +++ speech-tools-1.2.3/lib/siod/siod.scm
