@@ -1,5 +1,7 @@
 This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+Debian GNU/Linux, to allow alaw output (asterisk interoperability)
+and modify data loading memory management (from bug #601294).
+The modified memory management patch was written by Samuel Thibault.
 
 --- speech-tools-1.2.3.orig/speech_class/EST_WaveFile.cc
 +++ speech-tools-1.2.3/speech_class/EST_WaveFile.cc
