@@ -1,5 +1,6 @@
 This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+Debian GNU/Linux, to allow alaw output (asterisk interoperability)
+
 
 --- speech-tools-1.2.3.orig/speech_class/EST_WaveFile.h
 +++ speech-tools-1.2.3/speech_class/EST_WaveFile.h
