@@ -1,5 +1,5 @@
 This patch is part of a series of patches for speech-tools for
-Debian GNU/Linux, which primarily fix build errors with GCC 4.3 and newer.
+Debian GNU/Linux, to allow alaw output (asterisk interoperability)
 
 --- speech-tools-1.2.3.orig/testsuite/correct/ch_wave_script.out
 +++ speech-tools-1.2.3/testsuite/correct/ch_wave_script.out
